# some-webserver-be

./: .gitignore  database.db  pyproject.toml  readme.md
some_webserver/: main.py  routes.py
some_webserver/cart/: cart_service.py  routes.py
some_webserver/menu/: routes.py
some_webserver/models/: persistence.py  view.py
tests/: conftest.py  fakers.py  test_routes.py
